<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <prerequisites>
    <maven>3.0.0</maven>
  </prerequisites>

  <groupId>com.jcraft</groupId>
  <artifactId>jsch.agentproxy</artifactId>
  <version>0.0.9</version>
  <packaging>pom</packaging>
  <name>jsch-agent-proxy: a parent of modules</name>

  <description>
    a proxy to ssh-agent and Pageant in Java
  </description>

  <organization>
    <name>JCraft,Inc.</name>
    <url>http://www.jcraft.com/</url>
  </organization>

  <url>http://www.jcraft.com/jsch-agent-proxy/</url>

  <modules>
    <module>jsch-agent-proxy-core</module>
    <module>jsch-agent-proxy-connector-factory</module>
    <module>jsch-agent-proxy-jsch</module>
    <module>jsch-agent-proxy-sshj</module>
    <module>jsch-agent-proxy-pageant</module>
    <module>jsch-agent-proxy-sshagent</module>
    <module>jsch-agent-proxy-usocket-jna</module>
<!--
    <module>jsch-agent-proxy-usocket-junixsocket</module>
-->
    <module>jsch-agent-proxy-usocket-nc</module>
    <module>jsch-agent-proxy-svnkit-trilead-ssh2</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <jsch.version>0.1.49</jsch.version>
    <jna.version>4.1.0</jna.version>
    <trilead.version>1.0.0-build217</trilead.version>
  </properties>

  <developers>
    <developer>
    <id>ymnk</id>
    <name>Atsuhiko Yamanaka</name>
    <email>ymnk at jcraft D0t com</email>
    <url>http://github.com/ymnk</url>
    <organization>JCraft,Inc.</organization>
    <organizationUrl>http://www.jcraft.com/</organizationUrl>
    <roles>
      <role>architect</role>
      <role>developer</role>
    </roles>
    <timezone>+9</timezone>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>Revised BSD</name>
      <url>http://www.jcraft.com/jsch-agent-proxy/LICENSE.txt</url>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git://github.com/ymnk/jsch-agent-proxy.git</connection>
    <developerConnection>scm:git:git@github.com:ymnk/jsch-agent-proxy.git</developerConnection>
    <url>http://github.com/ymnk/jsch-agent-proxy/</url>
  </scm>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
<!--
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
-->
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>2.3.7</version>
        <extensions>true</extensions>
      </plugin>
    </plugins>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-ssh-external</artifactId>
         <version>1.0-alpha-5</version>
      </extension>
    </extensions>
  </build>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>6</version>
  </parent>
</project>
